--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                             <h4 class="col-lg-3 control-label"><b>Terms <b style='color: red;'>*</b></b></h4>
                             <div class="col-lg-5">
                                 <div class="checkbox">
-                                    <input type="checkbox" name="terms" /> Accept the terms and policies
+                                    <input type="checkbox" name="terms" /> By checking the box, you have accepted the <a href="terms.html">terms and policies</a>
                                 </div>
                             </div>
                         </div>
