--- a/terms.html
+++ b/terms.html
@@ -48,13 +48,13 @@
                     <div class="form-group">
                         <h4><b>Last Updated On <script>document.write(today);</script></b></h4>
                         <h5>Please read these Terms and Agreement carefully before using
-                      the http://almondmilk.club website operated by Alvin Lu</h5>
+                      the http://almondmilk.club website operated by Alvin Lu.</h5>
                         <!-- <br> -->
                         <h5>Your access to and use of the Service is conditioned on your acceptance of and compliance with
-                        these Terms. These Terms apply to all visitors, users and others who access or use the Service</h5>
+                        these Terms. These Terms apply to all visitors, users and others who access or use the service.</h5>
                         <!-- <br> -->
-                        <h5><b>By accessing or using the Service you agree to be bound by these Terms. If you disagree
-                        with any part of the terms then you may not access the Service</b></h5>
+                        <h5><b>By accessing or using the Service you agree to be bound by these terms. If you disagree
+                        with any part of the terms then you may not access the service.</b></h5>
                     </div>
 
                 </div>
